--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "visitCounter",
   "version": "1.0.0",
   "description": "A visit counter.",
-  "main": "index.js",
+  "main": "counter.js",
   "dependencies": {
     "express": "^3.4.8",
     "jade": "^1.9.2"
